-show images linked to in attribute info -ui to download files linked to in attribute info
-increased the number of features returned on getfeatureinfo to 50
-missing 'WorkspaceName' caused an exception on map preview
-some events were scoped to "body" instead of "document"
-some ogp custom events were named 'search.*', which conflicted with the
event fired by HTML5 search input (Chrome). Changed to 'searchform.*'

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -1159,6 +1159,24 @@ td.attributeName:hover {
     overflow: auto;
 }
 
+.attrExtrasContainer {
+	float: right;
+	padding: 5px;
+}
+
+.attrPreview {
+	border: 1px solid #417dc1;
+}
+
+.attrPreview .loading {
+	text-align: center;
+	margin-top: 20px;
+}
+
+.attrDownload {
+	padding: 5px;
+}
+
 .columnSort {
 	width: 19px;
 	height: 19px;
@@ -1420,6 +1438,14 @@ Repositories
 
 .pasdaIcon {
 	background: url("../media/pasda_icon.png") no-repeat transparent;
+}
+
+.nygisIcon {
+	background: url("../media/nygis_icon.png") no-repeat transparent;
+}
+
+.usgsIcon {
+	background: url("../media/usgs_icon.png") no-repeat transparent;
 }
 
 
