--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -21,7 +21,9 @@ if (!Object.create) {
 	};
 };
 </script>
+<%@include file="devincludes.jspf"%>
 
+<!--
 <c:choose>
       <c:when test="${dev}" >
       <%@include file="devincludes.jspf"%>
@@ -33,6 +35,6 @@ if (!Object.create) {
       <script type="text/javascript" src="resources/javascript/ogp.js"></script>
       </c:otherwise>
 </c:choose>
-
+-->
 
 
