--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/about.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/about.jspf
@@ -1,23 +1,12 @@
 <div id="about" class="dialog infoDialog">
-	<p>GeoData@Tufts is developed and maintained by Tufts University
-		Information Technology. Tufts is leading the development in
-		collaboration with Harvard of this open source, federated web
-		application to rapidly discover, preview, and retrieve geospatial data
-		from multiple repositories. GeoData@Tufts combines an intuitive,
-		map-based search interface along with traditional text-based metadata
-		search tools for rapid data discovery and for use in teaching,
-		learning, and research.</p>
-	<p>
-		GeoData@Tufts is part of <a href="http://www.opengeoportal.org">The
-			Open Geoportal</a>. The Open Geoportal is a consortium comprised of
-		contributions of several universities and organizations to help
-		facilitate the discovery and acquisition of geospatial data across
-		many organizations and platforms. Current partners include: Harvard,
-		MIT, MassGIS, Princeton, Columbia, Stanford, UC Berkeley, UCLA, Yale,
-		and UConn. Built on open source technology, The Open Geoportal
-		provides organizations the opportunity to share thousands of
-		geospatial data layers, maps, metadata, and development resources
-		through a single common interface.
+	<p>The Open Geoportal (OGP) is a collaboratively developed, open source, federated web application framework 
+	to rapidly discover, preview and retrieve geospatial data from multiple repositories. The Open Geoportal 
+	Federation is a community of geospatial professionals, developers, information architects, librarians, 
+	metadata specialists and enthusiasts working together to make geospatial data and maps available on the 
+	web and contribute to global spatial data infrastructure.
+ 	</p>
+ 	<p>
+	For more information please visit <a href="http://opengeoportal.org">http://opengeoportal.org</a>
 	</p>
 	<p>
 		<%@include file="mailto.jspf"%>
