--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -9,7 +9,7 @@
 		<button id="userGuideLink" class="infoLinks button headerButton">Help</button>
 		<span class="separator">|</span> 
 		<button id="highlightsLink" class="infoLinks button headerButton">About</button> 
-		<span class="separator">|</span> 
-		<button id="headerLogin" class="infoLinks login button headerButton">Login</button>
+		<!--  <span class="separator">|</span> 
+		<button id="headerLogin" class="infoLinks login button headerButton">Login</button> -->
 	</div>
 </div>
