--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
@@ -38,7 +38,7 @@
 				<label>Repository:</label>
 				<div id="repositoryDropdown" class="searchFormInput"></div>
 			</div>
-			<div class="advancedSearch searchFormRow searchRow4">
+			<div id="restrictedCheckContainer" class="advancedSearch searchFormRow searchRow4">
 				<span class="formCheckbox searchFormInput"> <input
 					type="checkbox" name="restrictedCheck" id="restrictedCheck" /> 
 					<label for="restrictedCheck">Include Restricted Data</label>
