-work on new xslts for iso and fgdc to html -cleaned up html templates, added method for caching compiled templates -clean up unused files

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/leftPanel.jspf
@@ -7,19 +7,19 @@
 	<div id="tabs">
 		<ul>
 			<li><a href="#searchTab">
-					<div id="searchTabText" class="tabText">
-						<div>
+					<span id="searchTabText" class="tabText">
+						<span>
 							<span id="resultsNumber" class="resultsNumber"> 0 </span> Results
-						</div>
-					</div>
+						</span>
+					</span>
 			</a></li>
 			<li><a href="#cartTab">
-					<div id="cartTabText" class="tabText">
-						<div class="shoppingCartIcon"></div>
-						<div id="cartTabTextInner">
+					<span id="cartTabText" class="tabText">
+						<span class="shoppingCartIcon"></span>
+						<span id="cartTabTextInner">
 							Cart <span id="savedLayersNumberTab" class="savedLayersNumber">(0)</span>
-						</div>
-					</div>
+						</span>
+					</span>
 			</a></li>
 		</ul>
 		<div id="searchTab">
