--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
@@ -1,61 +1,61 @@
 
 <div id="searchBox" class="searchBox shadowDownOuter">
 	<form id="searchForm" onsubmit="return false;">
-		<div id="searchCol1" class="searchCol">
+		<!--  <div id="searchCol1" class="searchCol">-->
 			<div id="geosearchDiv"
-				class="basicSearch whereBox searchFormRow searchRow1">
+				class="basicSearch whereBox searchFormRow searchRow1 searchCol searchCol1">
 				<label for="whereField"><span class="labelText">Where:</span></label>
 				<input id="whereField" type="search" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow2">
+			<div class="advancedSearch searchFormRow searchRow2 searchCol searchCol1">
 				<span class="formCheckbox searchFormInput"> <input
 					type="checkbox" name="mapFilterCheck" id="mapFilterCheck"
 					class="mapFilterFlag" value="ignore" /> <label
 					for="mapFilterCheck">Ignore map extent (Where)</label>
 				</span>
 			</div>
-			<div class="advancedSearch searchFormRow searchRow3">
+			<div class="advancedSearch searchFormRow searchRow3 searchCol searchCol1">
 				<label>Topic:</label>
 				<div id="topicDropdown" class="searchFormInput"></div>
 			</div>
-		</div>
-		<div id="searchCol2" class="searchCol">
-			<div class="basicSearch whatBox searchFormRow">
+	<!--  </div>
+		<div id="searchCol2" class="searchCol">-->
+			<div class="basicSearch whatBox searchFormRow searchCol searchCol2">
 				<label for="whatField"> <span class="labelText">What:</span>
 				</label> <input id="whatField" type="search" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow1">
+			<div class="advancedSearch searchFormRow searchRow1 searchCol searchCol2">
 				<label for="advancedKeywordText">Keyword:</label> <input
 					name="advancedKeywordText" type="search" class="searchFormInput"
 					id="advancedKeywordText" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow2">
+			<div class="advancedSearch searchFormRow searchRow2 searchCol searchCol2">
 				<label>Data Type:</label>
 				<div id="dataTypeDropdown" class="styledDropdown searchFormInput">
 				</div>
 			</div>
-			<div class="advancedSearch searchFormRow searchRow3">
+			<div class="advancedSearch searchFormRow searchRow3 searchCol searchCol2">
 				<label>Repository:</label>
 				<div id="repositoryDropdown" class="searchFormInput"></div>
 			</div>
-			<div id="restrictedCheckContainer" class="advancedSearch searchFormRow searchRow4">
+			<div id="restrictedCheckContainer" class="advancedSearch searchFormRow searchRow4 searchCol searchCol2">
 				<span class="formCheckbox searchFormInput"> <input
 					type="checkbox" name="restrictedCheck" id="restrictedCheck" /> 
 					<label for="restrictedCheck">Include Restricted Data</label>
 				</span>
 			</div>
-		</div>
-		<div id="searchCol3" class="searchCol">
-			<div class="basicSearch basicSearchButtons searchFormRow">
+		<!--  </div> -->
+<!-- 		<div id="searchCol3" class="searchCol"> -->
+			<div class="basicSearch basicSearchButtons searchFormRow  searchCol searchCol3">
 				<button id="moreSearchOptions" class="searchToggle button offsetColor" tabindex="0" >Advanced
 					Search</button>
 			</div>
-			<div class="advancedSearch searchFormRow searchRow1">
+			<div class="advancedSearch searchFormRow searchRow1 searchCol searchCol3">
 				<label for="advancedOriginatorText">Originator:</label> <input
 					name="advancedOriginatorText" type="search" class="searchFormInput"
 					id="advancedOriginatorText" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow2">
+			<div class="advancedSearch searchFormRow searchRow2 searchCol searchCol3">
 				<label for="advancedDateFromText">Year(s):</label> <span
 					class="searchFormInput"> <input name="advancedDateFromText"
 					type="search" id="advancedDateFromText" size="4" /> to <input
@@ -63,10 +63,10 @@
 					size="4" />
 				</span>
 			</div>
-			<div class="advancedSearch searchFormRow advancedSearchButtons searchRow4">
+			<div class="advancedSearch searchFormRow advancedSearchButtons searchRow4 searchCol searchCol3">
 				<button id="lessSearchOptions" class="searchToggle button offsetColor" tabindex="0" >Basic
 					Search</button>
 			</div>
-		</div>
+<!-- 		</div> -->
 	</form>
 </div>
