-separate attribute definition service from GetFeatureInfo response. -add controller to retrieve metadata and attribute definition info in a more RESTful manner -refactor GetFeatureInfo javascript from one long function to several smaller ones -change the default location and size of the feature info dialog so that it appears in the bottom right corner. -refactor bounding box preview handling to be more model driven -fix problem with Google logo so that it remains on screen -optimize some jQuery selector usage

--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -562,9 +562,12 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	outline: 0;
 	border-radius: 0;
 	z-index: 1500;
-	-moz-box-shadow: 0px 4px 6px -2px #888888;
-	-webkit-box-shadow: 0px 4px 6px -2px #888888;
-	box-shadow: 0px 4px 6px -2px #888888;
+    /*	-moz-box-shadow: 0px 4px 6px -2px #888888;
+        -webkit-box-shadow: 0px 4px 6px -2px #888888;
+        box-shadow: 0px 4px 6px -2px #888888;*/
+    -moz-box-shadow: 2px 4px 6px #555555;
+    -webkit-box-shadow: 2px 4px 6px #555555;
+    box-shadow: 2px 4px 6px #555555;
 }
 
 .ui-dialog.ui-corner-all {
