--- a/geoportal_1/src/main/webapp/resources/css/dropdown.css
+++ b/geoportal_1/src/main/webapp/resources/css/dropdown.css
@@ -74,6 +74,7 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	overflow-y: auto;
 	position: absolute;
 	z-index: 1500;
+	box-shadow: 1px 3px 6px #555555;
 }
 
 .searchFormInput.dropdown {
