--- a/geoportal_1/src/main/webapp/resources/css/google.css
+++ b/geoportal_1/src/main/webapp/resources/css/google.css
@@ -1,18 +1,15 @@
 /* attribution displayed elsewhere */
 .olLayerGoogleCopyright {
 	 display: none;
-}
-
-.olLayerGooglePoweredBy {
-	 width: 70px;
-}
-
-.gm-style .gmnoprint {
-    right: 69px !important;
+    z-index: 0 !important;
 }
 
 .googleLogo {
     margin-bottom: 19px !important;
+}
+
+.googleLogo img {
+    left: 25px !important;
 }
 
 .poweredByGoogleAttr {
