-Fix 2 bugs in WMS requests:     -request version 1.1.0 for geowebcache     -remove "tiled=true" for uncached requests (with included SLD body) -Remove default logo text value. -change drop shadow values -add maximum size for autocomplete menus -add icon for "no preview available" and new icon for "preview at external site" -add Harabara font for consistency with OpenGeoportal.org -changed several native checkboxes to styled checkboxes for consistency. Also refactored styled checkboxes so that they are backed by actual HTML checkboxes. -changed menu spacing -added an event mask so that the map doesn't capture mouse events when dragging or resizing other objects -cleaned up css for preview controls, fixed alignment in Chrome -improved event handling for the color picker. -cleaned up some stray "console.log" commands

--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
@@ -11,7 +11,7 @@
 				<span class="formCheckbox searchFormInput"> <input
 					type="checkbox" name="mapFilterCheck" id="mapFilterCheck"
 					class="mapFilterFlag" value="ignore" /> <label
-					for="mapFilterCheck">Ignore map extent (Where)</label>
+					for="mapFilterCheck"><div class="checkBox"></div><div class="checkLabel">Ignore map extent (Where)</div></label>
 				</span>
 			</div>
 			<div class="advancedSearch searchFormRow searchRow3 searchCol searchCol1">
@@ -39,9 +39,9 @@
 				<div id="repositoryDropdown" class="searchFormInput"></div>
 			</div>
 			<div id="restrictedCheckContainer" class="advancedSearch searchFormRow searchRow4 searchCol searchCol2">
-				<span class="formCheckbox searchFormInput"> <input
-					type="checkbox" name="restrictedCheck" id="restrictedCheck" /> 
-					<label for="restrictedCheck">Include Restricted Data</label>
+				<span class="formCheckbox searchFormInput">
+					<input type="checkbox" name="restrictedCheck" id="restrictedCheck" />
+					<label for="restrictedCheck"><div class="checkBox"></div><div class="checkLabel">Include Restricted Data</div></label>
 				</span>
 			</div>
 		<!--  </div> -->
