--- a/geoportal_1/src/main/webapp/resources/css/layerTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/layerTable.css
@@ -50,6 +50,28 @@ layer view
 	width: 17px;
 }
 
+input[type=checkbox] {
+	display: none;
+}
+
+input[type=checkbox] + label > div.checkLabel {
+    padding-left: 3px;
+    display: inline-block;
+}
+
+input[type=checkbox] + label > div.checkBox {
+    background: url("../media/ogp-sprite.png") no-repeat scroll -61px -89px transparent;
+    width: 25px;
+    height: 15px;
+    margin-left: 7px;
+    margin-bottom: -2px;
+    display: inline-block;
+}
+
+input[type=checkbox]:checked + label > div.checkBox {
+    background: url("../media/ogp-sprite.png") no-repeat scroll -84px -89px transparent;
+}
+
 .checkOff {
 	background: url("../media/ogp-sprite.png") no-repeat scroll -61px -89px
 		transparent;
@@ -75,6 +97,12 @@ layer view
 	background: url("../media/ogp-sprite.png") no-repeat scroll -110px -89px rgba(0, 0, 0, 0);
     height: 17px;
     width: 25px;
+}
+
+.previewNA {
+	background: url("../media/ogp-sprite.png") no-repeat scroll -31px -13px rgba(0, 0, 0, 0);
+	height: 17px;
+	width: 25px;
 }
 
 .previewedLayers {
