--- a/geoportal_1/src/main/webapp/resources/css/localize.css
+++ b/geoportal_1/src/main/webapp/resources/css/localize.css
@@ -1,20 +1,30 @@
 @CHARSET "UTF-8";
 
+@font-face {
+    font-family: Harabara;
+    src: url('../media/fonts/harabara-webfont.eot'); /* IE9 Compatibility Modes */
+    src: url('../media/fonts/harabara-webfont.eot?') format('eot'), /* IE6-IE8 */ url('../media/fonts/harabara-webfont.woff') format('woff'), /* Modern Browsers */ url('../media/fonts/harabara-webfont.ttf') format('truetype'), /* Safari, Android, iOS */ url('../media/fonts/harabara-webfont.svg#harabararegular') format('svg'); /* Legacy iOS */
+}
+
 
 #logoGraphic {
-		background: url("../media/OGP_logo.png") repeat scroll 0 -5px rgba(0, 0, 0, 0);
+    background: url("../media/OGP_logo.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
 		height: 43px;
-		width: 50px;
+    width: 43px;
 		padding: 2px;
 }
 
 #logo > div {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 #logo > div.logoText {
-	margin-left: -9px;
+    font-family: Harabara;
+    letter-spacing: .05em;
+    color: #000000;
+    margin-left: 0.2em;
+    margin-top: 2px;
 }
 /*
 #footerLogos .institutionLogo {
