--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -74,6 +74,10 @@
 	margin-right: 6px;
 }
 
+#ogpMapButtons > .mapStyledButton, #ogpMapButtons > .dropdown button{
+	box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.22);
+}
+
 #basemapMenu {
 	display: inline-block;
 }
@@ -473,5 +477,13 @@ div.olMap {
 
 .olMapViewport > div {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+}
+
+div.olMap .eventMask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 
