--- a/geoportal_1/src/main/webapp/resources/css/previewControls.css
+++ b/geoportal_1/src/main/webapp/resources/css/previewControls.css
@@ -3,12 +3,12 @@ preview controls
 ***********/
 
 .previewControls {
-	font-size: 11px;
+    padding-bottom: 3px;
 }
 
 .previewControls > div {
-	line-height: 15px;
 	display: inline-block;
+    vertical-align: top;
 	height: 17px;
 	position: relative;
 }
@@ -22,24 +22,24 @@ preview controls
 .sliderDisplay {
 	font-size: 10px;
 	border: 1px solid #aaaaaa;
-	border-radius: 3px 0 0 3px;
-	padding-left: 5px;
-	padding-right: 2px;
+    border-radius: 2px 0 0 2px;
+    padding: 0 2px 2px 5px;
+    height: 12px;
 	display: inline-block;
 }
 
 .sliderArrow {
-	background: url("../media/ogp-sprite.png") no-repeat scroll -65px -64px
+    background: url("../media/ogp-sprite.png") no-repeat scroll -65px -65px
 		transparent;
 	border-bottom: 1px solid #aaaaaa;
 	border-radius: 0 3px 3px 0;
 	border-right: 1px solid #aaaaaa;
 	border-top: 1px solid #aaaaaa;
-	height: 15px;
+    height: 14px;
 	width: 14px;
 	display: inline-block;
 	position: relative;
-    top: 4px;
+    vertical-align: bottom;
     left: -4px;
 }
 
@@ -78,19 +78,18 @@ preview controls
     box-shadow: 5px 4px 4px #bbbbbb;
     left: -5px;
     padding: 5px;
-    margin-top: 23px;
+    margin-top: -1px;
     position: absolute;
-    z-index: 1;
+    z-index: -1;
 }
 
 .colorControlWrapper {
     border: none;
     background: transparent none repeat scroll 0 0;
     padding: 5px;
-    position: absolute;
 }
 
-.colorControlWrapper.controlOn {
+.colorControlCell.controlOn .colorControlWrapper {
     background: white none repeat scroll 0 0;
     border-left: 1px solid #aaaaaa;
     border-radius: 3px 3px 0 0;
@@ -98,7 +97,7 @@ preview controls
     border-top: 1px solid #aaaaaa;
     margin-top: 1px;
     padding: 4px 4px 1px;
-    z-index: 2;
+    z-index: 1;
 }
 
 td.colorCellParent {
@@ -135,8 +134,7 @@ div.colorCell.colorCellSelected {
 }
 
 .opacityControlCell {
-	left: 71px;
-	top: -3px;
+    left: 98px;
 }
 
 .opacityControlCell .sliderValue {
@@ -146,13 +144,17 @@ div.colorCell.colorCellSelected {
 }
 
 .sizeControlCell {
-	left: 83px;
-	top: -3px;
+    left: 104px;
 }
 
 .colorControlCell {
-	left: 89px;
+    z-index: 0;
+    left: 103px;
     top: -3px;
+}
+
+.colorControlCell.controlOn {
+    z-index: 20;
 }
 
 .layerInfo {
@@ -163,7 +165,7 @@ div.colorCell.colorCellSelected {
 }
 
 .zoomToLayerControl {
-    left: 127px;
+    left: 86px;
 	background: url("../media/ogp-sprite.png") no-repeat scroll -9px -90px
 		transparent;
 	height: 17px;
@@ -172,7 +174,7 @@ div.colorCell.colorCellSelected {
 }
 
 .attributeInfoControl {
-    left: 133px;
+    left: 115px;
 	height: 17px;
 	width: 17px;
 	top: 1px;
